# skd-nrf

./: west.yml
doc/nrf/: links.txt  samples.rst  shortcuts.txt  ug_app_dev.rst  ug_thread.rst  ug_thread_ot_memory.rst  ug_thread_supported_features.rst  ug_thread_tools.rst
dts/bindings/radio_fem/: psemi-fem.yaml
include/net/: coap_utils.rst
modules/nrfxlib/nrf_802154/: CMakeLists.txt
samples/matter/light_bulb/boards/: nrf52840dk_nrf52840.conf
samples/matter/lock/boards/: nrf52840dk_nrf52840.conf
samples/net/openthread/coap_client/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/net/openthread/coap_client_ble/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/openthread/cli/: CMakeLists.txt  Kconfig  README.rst  overlay-logging.conf  overlay-minimal_multiprotocol.conf  overlay-minimal_singleprotocol.conf  overlay-thread_1_2.conf  overlay-usb.conf  prj.conf  sample.yaml
samples/openthread/cli/harness/: overlay-cert-thread_1_2.conf  overlay-cert.conf
samples/openthread/cli/src/: main.c
samples/openthread/coap_client/: CMakeLists.txt  README.rst  overlay-mtd.conf  prj.conf  sample.yaml
samples/openthread/coap_server/: README.rst  overlay-logging.conf  prj.conf  sample.yaml
samples/openthread/common/: overlay-ot-defaults.conf
samples/openthread/coprocessor/: README.rst  prj.conf  sample.yaml
samples/openthread/ncp/: README.rst  sample.yaml
subsys/mpsl/fem/: CMakeLists.txt  Kconfig
subsys/mpsl/init/: Kconfig
subsys/net/openthread/: Kconfig.defconfig
tests/psa/: testcase.yaml
tests/psa/src/: main.c
(+19 files in other folders)
